--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "@types/node": "^16.18.30",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "vite": "^4.3.8",
+    "vite-tsconfig-paths": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "vite-start": "vite",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "vite-build": "vite build",
+    "vite-preview": "vite preview",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,6 +45,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://app.moussemyanmar.com"
+  }
 }
